--- a/src/templates/newsletter.html
+++ b/src/templates/newsletter.html
@@ -36,6 +36,12 @@
           <input type="email" class="form-control" id="email" name="email" required>
         {% endif %}
       </div>
+      <div class="form-group">
+        <label for="institution">Institution</label>
+        {% if not request.user.is_authenticated %}
+          <input type="institution" class="form-control" id="institution" name="institution">
+        {% endif %}
+      </div>
       <button type="submit" class="btn btn-primary"><i class="fas fa-fw fa-envelope"></i> Sign up</button>
       {% csrf_token %} 
     
