working on improving the blogs and events

--- a/src/templates/_menu-islands.html
+++ b/src/templates/_menu-islands.html
@@ -46,7 +46,10 @@
 </li>
 
 <li class="nav-item">
-  <a class="nav-link" href="/news_events/">News &amp; Events</a>
+  <a class="nav-link" href="/news/">News &amp; Blogs</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="/events_list/">Events</a>
 </li>
 
 {% include "_menu-account.html" %}
