--- a/src/templates/news.list.html
+++ b/src/templates/news.list.html
@@ -119,7 +119,6 @@
       var searchInput = $("#search-input").val().toLowerCase();
       var yearFilter = $("#year-filter").val();
       var typeFilter = $("#type-filter").val();
-      console.log(typeFilter);
 
       $(".news-card").each(function() {
         var titleElem = $(this).find(".card-title");
@@ -130,11 +129,9 @@
         var newsYear = $(this).data("year");
         var newsType = $(this).data("type");
 
-        console.log(newsType);
-
         var matchesSearch = newsTitle.includes(searchInput);
         var matchesYear = !yearFilter || newsYear == yearFilter;
-        var matchesType = !newsType || newsType == typeFilter;
+        var matchesType = !typeFilter || newsType == typeFilter;
 
         if (matchesSearch && matchesYear && matchesType) {
           $(this).show();
