--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -11,41 +11,41 @@
 
           {% if PROJECT.slug == "untraceable" %}
             {% if request.user.is_authenticated %}
-            <a class="btn btn-inverse mt-2 mr-3" href="{% if DEBUG and PROJECT.id != 1 %}/{{ PROJECT.slug }}{% endif %}/hub/profile/">
+            <a class="btn btn-inverse mt-2 mr-3" href="/hub/profile/">
               <i class="fas fa-fw fa-user"></i>
               My profile
             </a>
-            <a class="btn btn-inverse mt-2 mr-3" href="{% if DEBUG and PROJECT.id != 1 %}/{{ PROJECT.slug }}{% endif %}/accounts/logout/?next={{ request.get_full_path }}">
+            <a class="btn btn-inverse mt-2 mr-3" href="/accounts/logout/?next={{ request.get_full_path }}">
               <i class="fas fa-fw fa-sign-out"></i>
               Log out
             </a>
             {% else %}
-              <a class="btn btn-inverse mt-2 mr-3" href="{% if DEBUG and PROJECT.id != 1 %}/{{ PROJECT.slug }}{% endif %}/accounts/register/?next={{ request.get_full_path }}">
+              <a class="btn btn-inverse mt-2 mr-3" href="/accounts/register/?next={{ request.get_full_path }}">
               <i class="fas fa-fw fa-user"></i>
                 Register
               </a>
-              <a class="btn btn-inverse mt-2 mr-3" href="{% if DEBUG and PROJECT.id != 1 %}/{{ PROJECT.slug }}{% endif %}/accounts/login/?next={{ request.get_full_path }}">
+              <a class="btn btn-inverse mt-2 mr-3" href="/accounts/login/?next={{ request.get_full_path }}">
               <i class="fas fa-fw fa-sign-in"></i>
                 Sign in
               </a>
             {% endif %}
 
           {% else %}
-          <a style='display:none' class="btn btn-inverse mt-2 mr-3" href="{% if DEBUG and PROJECT.id != 1 %}/{{ PROJECT.slug }}{% endif %}/contributor/">
+          <a style='display:none' class="btn btn-inverse mt-2 mr-3" href="/contributor/">
             <i class="fas fa-fw fa-user-plus"></i>
             Become a contributor
           </a>
-          <a class="btn btn-inverse mt-2 mr-3" href="{% if DEBUG and PROJECT.id != 1 %}/{{ PROJECT.slug }}{% endif %}/hub/">
+          <a class="btn btn-inverse mt-2 mr-3" href="/hub/">
             <i class="fas fa-fw fa-fist-raised"></i>
             Community portal
           </a>
           {% if PROJECT.slug != "islands" %}
-          <a class="btn btn-inverse mt-2 mr-3" href="{% if DEBUG and PROJECT.id != 1 %}/{{ PROJECT.slug }}{% endif %}/newsletter/">
+          <a class="btn btn-inverse mt-2 mr-3" href="/newsletter/">
             <i class="fas fa-fw fa-envelope"></i>
             Subscribe
           </a>
           {% endif %}
-          <a class="btn btn-inverse-basic mt-2 mr-3" href="{% if DEBUG and PROJECT.id != 1 %}/{{ PROJECT.slug }}{% endif %}/hub/work/?status=1">
+          <a class="btn btn-inverse-basic mt-2 mr-3" href="/hub/work/?status=1">
             <i class="fal fa-fw fa-tasks"></i>
             View open tasks
           </a>
