--- a/src/templates/_leaflet.html
+++ b/src/templates/_leaflet.html
@@ -15,8 +15,8 @@
   });
 
   // add tile layer
-  var tileLayer = L.tileLayer("https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={{ MAPBOX_API_KEY }}", {
-    attribution: "Map data &copy; <a href='https://www.openstreetmap.org/'>OpenStreetMap</a> contributors, <a href='https://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA</a>, Imagery © <a href='https://www.mapbox.com/'>Mapbox</a>",
+  var tileLayer = L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+    attribution: "Map data &copy; <a href='https://www.openstreetmap.org/'>OpenStreetMap</a> contributors, <a href='https://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA</a>",
     id: "{% if leaflet.style %}{{ leaflet.style }}{% elif properties.map_layer_style %}mapbox/{{ properties.map_layer_style }}{% else %}mapbox/streets-v11{% endif %}",
     tileSize: 512,
     zoomOffset: -1,
