--- a/src/templates/islands/index.html
+++ b/src/templates/islands/index.html
@@ -176,7 +176,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card icon-card clickable-card" data-url="/hub/forum">
+        <div class="card icon-card clickable-card">
           <div class="icon bg-{% if alternative_design %}light{% else %}primary{% endif %}">
             <i class="fal fa-fw fa-user-friends {% if not alternative_design %} text-light{% endif %}"></i>
           </div>
