--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load sass_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,28 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  {% if PROJECT.slug == "water" %}
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XGSZJ40YPQ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-XGSZJ40YPQ');
-    </script>
-  {% endif %}
-
   <link class="favicon" rel="shortcut icon" sizes="126x126" href="{% static 'img/favicon/favicon.png' %}">
-
-  {% if PROJECT.id == 1 %}
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-  {% endif %}
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
   <title>
   {% if title %}
@@ -43,7 +27,7 @@
   {% endif %}
   {{ PROJECT }}
   {% if PROJECT.back_link %}
-    | Metabolism of Cities
+    | Metabolism of Islands
   {% endif %}
   </title>
 
@@ -53,7 +37,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   {% endif %}
 
-  <link href="{% sass_src 'css/main.scss' %}?refresh07-mar" rel="stylesheet" type="text/css" />
+  <link href="{% static 'css/main.css' %}?rf12" rel="stylesheet" type="text/css" />
 
   {% if load_select2 %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css"/>
@@ -78,10 +62,6 @@
 
   {% if load_lightbox %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.css">
-  {% endif %}
-
-  {% if PROJECT.slug == "peeide" %}
-    <link href="{% sass_src 'css/ndee.scss' %}?refresh09-nov" rel="stylesheet" type="text/css" />
   {% endif %}
 
   <script>
