--- a/src/templates/events.list.html
+++ b/src/templates/events.list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h2 style="text-align: center;">Events</h2>
+<h2 class="text-center">Events</h2>
 
 {% if list.count > 10 %}
 <div class="row mb-4">
