remove load static main.css on some files

--- a/src/templates/islands/index.html
+++ b/src/templates/islands/index.html
@@ -160,7 +160,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card icon-card">
+        <div class="card icon-card clickable-card" data-url="/hub/processing/">
           <div class="icon bg-{% if alternative_design %}light{% else %}primary{% endif %}">
             <i class="fal fa-fw fa-wrench {% if not alternative_design %} text-light{% endif %}"></i>
           </div>
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card icon-card clickable-card">
+        <div class="card icon-card clickable-card" data-url="/community/">
           <div class="icon bg-{% if alternative_design %}light{% else %}primary{% endif %}">
             <i class="fal fa-fw fa-user-friends {% if not alternative_design %} text-light{% endif %}"></i>
           </div>
