fix the data source url for the image

--- a/src/templates/events.list.html
+++ b/src/templates/events.list.html
@@ -41,7 +41,7 @@
           {% if each.image %}
             <img src="{{ each.image.url }}" class="card-img-top" alt="">
           {% else %}
-            <img src="{% static "img/events-default.jpg" %}" class="card-img-top" alt="" data-source="https://www.freepik.com/">
+            <img src="{% static "img/events-default.jpg" %}" class="card-img-top" alt="" data-source="https://www.freepik.com/free-vector/event-manager-typographic-header-celebration-meeting-organization-planning-pr-company-business-mass-media-social-network-promotion-isolated-vector-illustration_27953002.htm#fromView=search&page=2&position=1&uuid=eee7b969-61a6-43aa-a342-306bb0608d65&query=event+">
           {% endif %}
           <div class="card-body">
             <h5 class="card-title">
@@ -72,7 +72,7 @@
               {% if each.image %}
                 <img class="rounded" src="{{ each.image.url }}" alt="">
               {% else %}
-                <img class="rounded" src="{% static "img/events-default.jpg" %}" alt="" data-source="https://www.freepik.com/">
+                <img class="rounded" src="{% static "img/events-default.jpg" %}" alt="" data-source="https://www.freepik.com/free-vector/event-manager-typographic-header-celebration-meeting-organization-planning-pr-company-business-mass-media-social-network-promotion-isolated-vector-illustration_27953002.htm#fromView=search&page=2&position=1&uuid=eee7b969-61a6-43aa-a342-306bb0608d65&query=event+">
               {% endif %}
               <div class="media-body pl-3 align-self-center">
                 <h5 class="mb-0 card-title">
