--- a/src/templates/news.list.html
+++ b/src/templates/news.list.html
@@ -54,9 +54,9 @@
             <img src="{{ each.image.url }}" class="card-img-top" alt="">
           {% else %}
             {% if each.get_article_type_display == "News" %}
-              <img src="{% static "img/news-default.jpg" %}" class="card-img-top" alt="" data-source="https://www.freepik.com/">
+              <img src="{% static "img/news-default.jpg" %}" class="card-img-top" alt="" data-source="https://www.freepik.com/free-vector/people-showcasing-different-types-ways-access-news_3226072.htm#fromView=search&page=1&position=25&uuid=06bd397c-ac06-4b10-b197-85ef3966c054&query=news">
             {% else %}
-              <img src="{% static "img/blog-default.jpg" %}" class="card-img-top" alt="" data-source="https://www.freepik.com/">
+              <img src="{% static "img/blog-default.jpg" %}" class="card-img-top" alt="" data-source="https://www.freepik.com/free-vector/blogging-fun-content-creation-online-streaming-video-blog-young-girl-making-selfie-social-network-sharing-feedback-self-promotion-strategy-vector-isolated-concept-metaphor-illustration_10782771.htm#fromView=search&page=1&position=9&uuid=5029fbee-cb0c-48ff-84fc-5b4e477915e5&query=blog">
             {% endif %}
           {% endif %}
           <div class="card-body">
@@ -86,9 +86,9 @@
               <img class="rounded" src="{{ each.image.url }}" alt="">
             {% else %}
               {% if each.get_article_type_display == "News" %}
-                <img class="rounded" src="{% static "img/news-default.jpg" %}" alt="" data-source="https://www.freepik.com/">
+                <img class="rounded" src="{% static "img/news-default.jpg" %}" alt="" data-source="https://www.freepik.com/free-vector/people-showcasing-different-types-ways-access-news_3226072.htm#fromView=search&page=1&position=25&uuid=06bd397c-ac06-4b10-b197-85ef3966c054&query=news">
               {% else %}
-                <img class="rounded" src="{% static "img/blog-default.jpg" %}" alt="" data-source="https://www.freepik.com/">
+                <img class="rounded" src="{% static "img/blog-default.jpg" %}" alt="" data-source="https://www.freepik.com/free-vector/blogging-fun-content-creation-online-streaming-video-blog-young-girl-making-selfie-social-network-sharing-feedback-self-promotion-strategy-vector-isolated-concept-metaphor-illustration_10782771.htm#fromView=search&page=1&position=9&uuid=5029fbee-cb0c-48ff-84fc-5b4e477915e5&query=blog">
               {% endif %}
             {% endif %}
             <div class="media-body pl-3 align-self-center">
