add link to how to upload publication on MOI

--- a/src/templates/data/dashboard.html
+++ b/src/templates/data/dashboard.html
@@ -186,7 +186,7 @@
       </a>
     </div>
     <div class="col-xl-3 col-md-6">
-      <a class="btn-icon" href="">
+      <a class="btn-icon" href="https://www.youtube.com/embed/FkjvbUG59O8">
         <div class="title"><i class="fal fa-video fa-fw"></i> Publications
         </div>
         <div class="text">
