--- a/src/templates/islands/index.html
+++ b/src/templates/islands/index.html
@@ -213,7 +213,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card icon-card clickable-card" data-url="">
+        <div class="card icon-card clickable-card" data-url="https://www.youtube.com/embed/FkjvbUG59O8">
           <div class="icon bg-{% if alternative_design %}light{% else %}primary{% endif %}">
             <i class="fal fa-fw fa-book {% if not alternative_design %} text-light{% endif %}"></i>
           </div>
