--- a/src/templates/controlpanel/users.html
+++ b/src/templates/controlpanel/users.html
@@ -15,6 +15,7 @@
         <th>{{ _("User") }}</th>
         <th>{{ _("Type") }}</th>
         <th>{{ _("Since") }}</th>
+        <th>{{ _("Delete") }}</th>
         {% if show_child %}
           <th>{{ _("Signed up to") }}</th>
         {% endif %}
@@ -37,6 +38,20 @@
         {% if show_child %}
           <td>{{ each.record_child }}</td>
         {% endif %}
+        <td>
+          <form method="POST" style="display:inline;" onsubmit="return confirmDelete();">
+            {% csrf_token %}
+            <input type="hidden" name="user_id" value="{{ each.id }}">
+            <button type="submit" class="btn btn-danger btn-sm mb-4 view_user">
+              <i class="fal fa-fw fa-times fa-lg"></i> Delete this user
+            </button>
+          </form>
+          <script>
+            function confirmDelete() {
+              return confirm("Are you sure you want to delete this user?");
+            }
+          </script>
+        </td>
       </tr>
     {% endfor %}
     </tbody>
