--- a/src/templates/islands/index.html
+++ b/src/templates/islands/index.html
@@ -7,7 +7,6 @@
 {% block css %}
 <link rel="stylesheet"  type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
-
 <style>
   .top-layer {
     background-image: url("/media/records/USVI_St_Thomas_Dec_2019_1.JPG") !important;
@@ -161,7 +160,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card icon-card">
+        <div class="card icon-card clickable-card" data-url="/hub/processing/">
           <div class="icon bg-{% if alternative_design %}light{% else %}primary{% endif %}">
             <i class="fal fa-fw fa-wrench {% if not alternative_design %} text-light{% endif %}"></i>
           </div>
@@ -176,7 +175,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card icon-card clickable-card" data-url="/hub/forum">
+        <div class="card icon-card clickable-card" data-url="/community/">
           <div class="icon bg-{% if alternative_design %}light{% else %}primary{% endif %}">
             <i class="fal fa-fw fa-user-friends {% if not alternative_design %} text-light{% endif %}"></i>
           </div>
@@ -214,7 +213,7 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card icon-card clickable-card" data-url="">
+        <div class="card icon-card clickable-card" data-url="https://www.youtube.com/embed/FkjvbUG59O8">
           <div class="icon bg-{% if alternative_design %}light{% else %}primary{% endif %}">
             <i class="fal fa-fw fa-book {% if not alternative_design %} text-light{% endif %}"></i>
           </div>
